# matmul

./: CMakeLists.txt  a.out  densematgen.cpp  generatesparse.py  generator_main.cpp  hello-world-seq.cpp  matmul.cpp  out.txt  output.txt  output.txtt  output.txtt.save  test.csr
mat-tests-e/: ._dense_00010_00042  ._dense_00010_00442  ._dense_00010_04242  ._dense_00512_00042  ._result_1_00010_000_00042  ._result_1_00010_001_00442  ._result_1_00064_001_00442  ._result_2_00010_001_00442  ._result_2_00010_002_04242  ._result_2_00064_000_00042  ._result_2_00512_000_00042  ._result_2_00512_001_00442  ._result_2_00512_002_04242  ._result_3_00010_000_00042  ._result_3_00010_001_00442  ._result_3_00064_000_00042  ._result_3_00064_001_00442  ._result_3_00064_002_04242  ._result_3_00512_001_00442  ._result_3_00512_002_04242  ._sparse_00010_001  ._sparse_00010_002  ._sparse_00064_000  ._sparse_00512_001  dense_00010_04242  dense_00064_00042  dense_00512_00442  dense_00512_04242  result_1_00010_000_00042  result_1_00064_001_00442  result_1_00064_002_04242  result_1_00512_000_00042  result_1_00512_001_00442  result_2_00064_000_00042  result_2_00064_001_00442  result_2_00512_000_00042  result_2_00512_002_04242  result_3_00010_000_00042  result_3_00010_001_00442  result_3_00010_002_04242  (+6 more)
verifymat/: ._dense_00064_00042  ._dense_00064_00442  ._dense_00064_04242  ._dense_00512_00442  ._dense_00512_04242  ._result_1_00010_002_04242  ._result_1_00064_000_00042  ._result_1_00064_002_04242  ._result_1_00512_000_00042  ._result_1_00512_001_00442  ._result_1_00512_002_04242  ._sparse_00010_000  (+32 more)
(+4 files in other folders)
